# heig-su2016-supl

./: .gitignore  CMakeLists.txt  Makefile  test.sh  test.su
demos/: func.su  guess.su  p2.su  p3.su
src/: lexer.l  main.cpp  parser.y  supllib.cpp  supllib.hpp  suvm.cpp  utils.cpp  utils.hpp
tests/: expr1.su  func.su  func2.su  if.su  p3.__main__.sux  p3.su
